refactor: use formatted() in CppAnalyzer getCacheStatistics